# llm-package-rank

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark-task.md  package-metadata.md
.github/workflows/: ci.yml
docs/: ROADMAP.md
fixtures/: packages.json  responses.json  tasks.json
llm_package_rank/: __init__.py  analysis.py  cli.py  report.py  sampler.py
reports/: sample.json  sample.md
tests/: test_analysis.py  test_sampler.py
